--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php":"~5.5.0|~5.6.0|~7.0.0",
     "google/cloud": "0.13.*",
-    "guzzle/http": "3.9.*",
+    "guzzlehttp/guzzle": "6.2.*",
     "imagine/imagine": "0.6.*"
   },
   "license": "MIT",
@@ -17,7 +17,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "nilsburg\\PhpVision\\": ""
+      "nilsburg\\": "src/"
     }
   }
 }
